--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>GreatFrontEnd Projects</title>
+    <title>User Testimonial Card</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
 
-    <!-- Tailwind CDN allows you to use Tailwind classes immediately in your HTML without any installation steps. 
+    <!-- Tailwind CDN allows you to use Tailwind classes immediately in your HTML without any installation steps.
       If you're not using Tailwind, you may delete the <script> -->
     <!-- Get started on Tailwind: https://tailwindcss.com/docs/installation/play-cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -24,31 +24,25 @@
     </style>
   </head>
   <body>
-    <!-- Add your site or application content here -->
-    <h1 class="text-5xl text-center font-semibold pt-20">
-      Hello world! Write your content here.
-    </h1>
+    <div class="testimonial-card">
+      <div class="user-info">
+        <img
+          src="img/profile-thumbnail.jpg"
+          alt="Avatar of Sarah Dole"
+          class="user-avatar"
+        />
+        <div>
+          <p class="user-name">Sarah Dole</p>
+          <p class="user-handle">@sarahdole</p>
+        </div>
+      </div>
+    <p class="testimonial-message">
+      I've been searching for high-quality abstract images for my design projects,
+      and I'm thrilled to have found this platform. The variety and depth of
+      creativity are astounding!
+    </p>
+  </div>
 
-    <!-- Sarah Dole
-      @sarahdole
-      I've been searching for high-quality abstract images for my design projects, 
-      and I'm thrilled to have found this platform. The variety and depth of creativity are astounding! 
-    -->
-
-    <!-- Attribute this challenge to yourself! -->
-    <div class="credits" data-gfe-screenshot-exclude="true">
-      A challenge by
-      <a
-        href="https://www.greatfrontend.com/projects?ref=challenges"
-        target="_blank"
-        >GreatFrontEnd Projects</a
-      >. Built by
-      <a
-        href="https://www.greatfrontend.com/projects/u/username"
-        target="_blank"
-        >Your Name</a
-      >.
-    </div>
     <script src="js/index.js"></script>
   </body>
 </html>
