--- a/index.html
+++ b/index.html
@@ -19,15 +19,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="icon" href="img/favicon.ico" sizes="any" />
-    <style>
-      /* You may write styles inside this <style> tag or within `css/style.css`. */
-    </style>
   </head>
   <body>
     <div class="testimonial-card">
       <div class="user-info">
         <img
-          src="img/profile-thumbnail.jpg"
+          src="img/profile-thumbnail.png"
           alt="Avatar of Sarah Dole"
           class="user-avatar"
         />
@@ -36,12 +33,12 @@
           <p class="user-handle">@sarahdole</p>
         </div>
       </div>
-    <p class="testimonial-message">
-      I've been searching for high-quality abstract images for my design projects,
-      and I'm thrilled to have found this platform. The variety and depth of
-      creativity are astounding!
-    </p>
-  </div>
+      <p class="testimonial-message">
+        I've been searching for high-quality abstract images for my design
+        projects, and I'm thrilled to have found this platform. The variety and
+        depth of creativity are astounding!
+      </p>
+    </div>
 
     <script src="js/index.js"></script>
   </body>
